--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,186 @@
+ *{
+
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  text-transform: capitalize;
+  transition: .2s linear;
+  color: white;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top:0; left: 0;
+  padding: 10px 20px;
+  margin:10px 40px;
+  background-color: rgba(255,255,255,.1);
+  z-index: 100;
+  border-radius: 5px;
+}
+
+header .fa-bars{
+  font-size: 30px;
+  color:#FFC700;
+}
 
 
-*{
+
+header ul{
+  display: flex;
+  margin: 20px;
+  list-style: none;
+  align-items: center;
+  background-color: ;
+}
+
+header ul li{
+  margin: 15px;
+}
+
+header ul li a{
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+header ul li a:hover{
+  color:#FFC700;
+  border-bottom: solid 1px  #FFC700;
+  padding-bottom: 5px;
+}
+
+.container{
+  display: flex;
+}
+
+.content {
+    min-height: 93vh;
+    width: 40vw;
+    background-color: #222;
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
+    padding: 40px;
+  }
+  .content::before{
+    content: '';
+    position: absolute;
+    bottom:-90px; left: -30px;
+    height:200px;
+    width:200px;
+    border-radius: 50%;
+    background:rgba(255,255,255,.1);
+    z-index: -1;
+  }
+  
+ 
+ .content h1{
+  color:#f0f0f0;
+  font-size: 72px;
+  padding-top: 70px;
+  text-shadow: 0 3px 5px #000;
+ }
+ .content h1 .span1{
+  font-size: 120px;
+}
+
+.content h1 .span2{
+  font-size: 150px;
+  color:#FFC700;
+}
+
+.content .btn {
+  position: absolute;
+  left: 20px;
+  bottom: 25px;
+  display: block;
+  font-weight: bold;
+  color: #FFC700;
+  font-size: 20px ;
+  cursor: pointer;
+}
+
+.content .btn .fa-arrow-right {
+  color: #FFC700;
+}
+
+.content .icons {
+  position: absolute;
+  bottom: 40px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.content .icons a{
+  margin: 10px;
+  font-size: 15px;
+}
+
+.content .icons a:hover{
+  color:#FFC700;
+}
+
+
+.image{
+  min-height: 93vh;
+  width:60vw;
+  background:url(../imgs/image_one.jpg) no-repeat;
+  background-size: cover !important;
+  background-position: center !important;
+}
+
+.cursor{
+  height:50px;
+  width:50px;
+  border-radius: 50%;
+  background-color: rgba(255,255,255,.3);
+  transform:translate(-50%, -50%);
+  transition: transform .2s;
+  pointer-events: none;
+  position: absolute;
+  z-index: 10;
+}
+.image:hover ~ .cursor{
+  background:none;
+  transform: scale(6);
+  border: 1px solid #ffffff;
+  backdrop-filter: grayscale();
+} 
+
+.image{
+  min-height: 93vh;
+  width:60vw;
+  background:url(../imgs/image-one.jpg) no-repeat;
+  background-size: cover !important;
+  background-position: center !important;
+}
+
+.cursor{
+  height:50px;
+  width:50px;
+  border-radius: 50%;
+  background-color: rgba(255,255,255,.3);
+  transform:translate(-50%, -50%);
+  transition: transform .2s;
+  pointer-events: none;
+  position: absolute;
+  z-index: 100;
+}
+
+.logo:hover ~ .cursor{
+  background:none;
+  transform: scale(6);
+  border: 1px solid #ffffff;
+  backdrop-filter: grayscale();
+}
+
+
+
+/* *{
   margin: 0; padding: 0;
   box-sizing: border-box;
   text-transform: uppercase;
@@ -148,4 +328,4 @@ header ul li a:hover{
   transform: scale(6);
   border: 1px solid #ffffff;
   backdrop-filter: grayscale();
-}
+} */
